Finished make file. And cleaned out old files.

--- a/clean-and-process/src/merge_officers_assignments.Rmd
+++ b/clean-and-process/src/merge_officers_assignments.Rmd
@@ -16,8 +16,8 @@ write_path <- paste("clean-and-process", "output", sep = "/")
 ```
 
 ```{r}
-officers <- my_read_csv(here(read_path, "cleaned_officers.csv"))
-assignments <- my_read_csv(here(read_path, "cleaned_assignments.csv"))
+officers <- my_read_csv(here(read_path, "cleaned-officers.csv"))
+assignments <- my_read_csv(here(read_path, "cleaned-assignments.csv"))
 setDT(officers)
 setDT(assignments)
 
