fixed a minor type in the outcomes reports.

--- a/clean-and-process/src/ba-merge_outcomes_officer-assignments.Rmd
+++ b/clean-and-process/src/ba-merge_outcomes_officer-assignments.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Replicate Ba et al. 2021 - Merging Stops to Officer Assignments"
+title: "Replicate Ba et al. 2021 - Merging Stops, Arrests, and Uses of Force to Officer Assignments"
 output: pdf_document
 ---
 
