--- a/clean-and-process/src/risi-merge_outcomes_officer-assignments.Rmd
+++ b/clean-and-process/src/risi-merge_outcomes_officer-assignments.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Risi - Merging Stops to Officer Assignments"
+title: "Risi - Merging Stops, Arrests, and Uses of Force to Officer Assignments"
 output: pdf_document
 ---
 
