--- a/create_outcomes.Rmd
+++ b/create_outcomes.Rmd
@@ -5,25 +5,60 @@ date: '2022-08-23'
 output: pdf_document
 ---
 
-## Libraries
+```{r, include = F}
+library(knitr)
+opts_chunk$set(message = F, echo = F, warning = F)
 
-```{r}
+library(here)
+source(here("functions.R"))
 
+# Read in data
+path <- paste("clean-and-process", "output", sep = "/")
+stops <- my_read_csv(here(path, "stops_officers_assignments_risi_min.csv"))
+arrests <- my_read_csv(here(path, "arrests_officers_assignments_risi_min.csv"))
+force <- my_read_csv(here(path, "force_officers_assignments_risi_min.csv"))
+
+rstops <- stops %>% filter(!is.na(stop_id))
+rarrests <- arrests %>% filter(!is.na(arrest_id))
+rforce <- force %>% filter(!is.na(force_id))
 ```
 
-## Read in packages
+## Number of observations
 
-```{r}
+For each outcome (stops, arrests, and uses of force), the resulting data frame is a representation of every shift assignment along with any outcomes which occurred during the shift. Any shift which did not have an outcome associated with it is still captured in the data frame, but it has a missing value for all columns associated with the outcome (e.g., stop_id).
 
-```
+### Stops
 
-## Some basic number rundowns
+* Number of total rows: `r nrow(stops)`
+* Number of shift assignments: `r length(unique(stops$shift_id))`
+    * Number of stop incidents: `r length(unique(stops$stop_id))`
+    * Number of shift assignments of with a recorded stop: `r length(unique(rstops$shift_id))`
+    * Proportion of shifts with a recorded stop: `r length(unique(rstops$shift_id)) / length(unique(stops$shift_id))`
+* Number of officers: `r length(unique(stops$officer_id))`
+    * Number of officers with a recorded stop: `r length(unique(rstops$officer_id))`
+    * Proportion of officers with a recorded stop: `r length(unique(rstops$officer_id)) / length(unique(stops$officer_id))`
 
-As in the number of observatons and what each observation entails... what does the data frame represent?
+### Arrests
 
-```{r}
+* Number of total rows: `r nrow(arrests)`
+* Number of shift assignments: `r length(unique(arrests$shift_id))`
+    * Number of arrest incidents: `r length(unique(arrests$arrest_id))`
+    * Number of shift assignments of with a recorded arrest: `r length(unique(rarrests$shift_id))`
+    * Proportion of shifts with a recorded stop: `r length(unique(rarrests$shift_id)) / length(unique(stops$shift_id))`
+* Number of officers: `r length(unique(arrests$officer_id))`
+    * Number of officers with a recorded arrest: `r length(unique(rarrests$officer_id))`
+    * Proportion of officers with a recorded stop: `r length(unique(rarrests$officer_id)) / length(unique(stops$officer_id))`
 
-```
+### Uses Of Force
+
+* Number of total rows: `r nrow(force)`
+* Number of shift assignments: `r length(unique(force$shift_id))`
+    * Number of force incidents: `r length(unique(force$force_id))`
+    * Number of shift assignments of with a recorded use of force: `r length(unique(rforce$shift_id))`
+    * Proportion of shifts with a recorded stop: `r length(unique(rforce$shift_id)) / length(unique(stops$shift_id))`
+* Number of officers: `r length(unique(force$officer_id))`
+    * Number of officers with a recorded use of force: `r length(unique(rforce$officer_id))`
+    * Proportion of officers with a recorded stop: `r length(unique(rforce$officer_id)) / length(unique(stops$officer_id))`
 
 ## Create outcomes
 
