--- a/create_outcomes.Rmd
+++ b/create_outcomes.Rmd
@@ -62,6 +62,61 @@ Stated more plainly, each row is a specific shift assignment **and** outcome (i.
     * Number of officers with a recorded use of force: `r length(unique(rforce$officer_id))`
     * Proportion of officers with a recorded use of force: `r length(unique(rforce$officer_id)) / length(unique(stops$officer_id))`
 
+## Visualizing Results
+
+### What are the demographic breakdowns of active patrol officers?
+
+There are `r nrow(officers)` active patrol officers from 2012 - 2015.
+
+**RACE**
+* About 50% of all active patrol officers are White. 25% are Black. 20% are Hispanic.
+* When looking at race and gender, Native Americans, White Americans, and Hispanic Americans have roughly an 80/20 split when it comes to male/female representation. Black Americans actually have a 65/35 split and Asian Americans & Pacific Islanders have a nearly 90/10 split. Interestingly, white women are not the majority among women but a plurality. Black women officers are over-represented based on the patrol officer population average for men vs. women.
+* Not surprisingly, Hispanic Americans are the most common racial group among those who speak Spanish (71% of those who speak Spanish are Hispanic). Roughly 46.5% of all Hispanic officer speak Spanish while most other racial groups have around 5-10% of their groups being able to speak Spanish.
+* Black Officers are, on average, older than officers from other racial groups with the average officer age being around 47 - 48. Hispanic and Asian-American/Pacific Islander officers tend to be younger with average ages around 40 - 42. White officers are in the middle with an average age around 45.
+
+**SEX**
+* 75% of officers are male.
+* Male and female officers have very similar age distributions.
+
+**SPANISH SPEAKING ABILITY**
+* 85% do not speak Spanish.
+* There does not appear to be any major differences in age or gender between those who do and do not speak Spanish.
+
+**Age**
+* The mean/median officer age is 44 with a standard deviation of around 9 years.
+
+```{r}
+officers <-
+    stops %>%
+    distinct(officer_id, officer_race, officer_gender, spanish, birth_year) %>%
+    mutate(age = 2015 - birth_year) %>%
+    select(-officer_id, -birth_year)
+
+officers %>%
+    filter(!is.na(officer_race)) %>%
+    ggpairs(upper = list(discrete = "colbar", combo = "facetdensitystrip"),
+            lower = list(discrete = "colbar", combo = "box"),
+            diag = list(wrap("barDiag")))
+```
+
+### Examine shift assignment patterns
+
+```{r}
+shift_assignments <-
+    stops %>%
+    distinct(shift_id, .keep_all = T) %>%
+    select(-stop_id, -district, -po_first, -contact_type, -civ.race, -civ.gender,
+           -civ.age, -lat, -lon, -hour, -stop_officer_id, -time)
+```
+
+
+
+
+
+
+
+
+
 ## Create outcomes
 
 ### Stops
